--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="https://cdn.bootcdn.net/ajax/libs/lamejs/1.2.0/lame.all.js"></script>
 </html>
